debugged Tours